--- a/tesk02/.gitignore
+++ b/tesk02/.gitignore
@@ -1,4 +1,4 @@
-/dump
+/dump/
 ### Yii template
 assets/*
 !assets/.gitignore
@@ -6,5 +6,5 @@ protected/runtime/*
 !protected/runtime/.gitignore
 protected/data/*.db
 themes/classic/views/
-
+/vendor/
 # Created by .ignore support plugin (hsz.mobi)
