--- a/tesk02/composer.json
+++ b/tesk02/composer.json
@@ -8,5 +8,13 @@
       "name": "Andrey Astashov",
       "email": "mvc.aaa@gmail.com"
     }
-  ]
+  ],
+  "autoload": {
+    "psr-0": {
+      "MyApp": "src"
+    }
+  },
+  "require": {
+    "cboden/ratchet": "0.3.*"
+  }
 }
